# yolo_tasting

./: .gitignore  CLAUDE.md  error.txt  requirements.txt  run_gui.py  yolo_test_v11_ultralytics.py  yolo_test_v5_ybc.py
.claude/: CLAUDE.md
common/: __init__.py  config.py  utils.py  video_processor.py
detectors/: __init__.py  base.py  yolov11_detector.py  yolov5_detector.py
gui/: __init__.py  app.py  detector_manager.py  model_registry.py
ros_yolo/: README.md
ros_yolo/catkin_ws/src/camera_publisher/: CMakeLists.txt  package.xml
ros_yolo/catkin_ws/src/camera_publisher/launch/: camera.launch
ros_yolo/catkin_ws/src/video_publisher/: CMakeLists.txt  package.xml
ros_yolo/catkin_ws/src/video_publisher/launch/: video.launch
ros_yolo/catkin_ws/src/video_publisher/scripts/: video_publisher.py
ros_yolo/catkin_ws/src/yolov5_ros/: CMakeLists.txt  package.xml
ros_yolo/catkin_ws/src/yolov5_ros/msg/: RecognitionObjectArray.msg
ros_yolo/catkin_ws/src/yolov8_ros/: CMakeLists.txt  package.xml
ros_yolo/catkin_ws/src/yolov8_ros/msg/: RecognitionObject.msg  RecognitionObjectArray.msg
ros_yolo/catkin_ws/src/yolov8_ros/scripts/: ros_yolov8.py  viewer.py
ros_yolo/docker/: Dockerfile  Dockerfile.camera  Dockerfile.video  docker-compose.yml  ros_entrypoint.sh
