<?xml version="1.0"?>
<package format="2">
  <name>video_publisher</name>
  <version>1.0.0</version>
  <description>Publish video file frames as ROS Image messages</description>

  <maintainer email="roboworks@example.com">roboworks</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package>
